[package]
name = "encore-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "High-performance data encoding, hashing, compression and conversion engine"
homepage = "https://github.com/yourorg/encore"
repository = "https://github.com/yourorg/encore"
documentation = "https://docs.rs/encore-core"
readme = "../../README.md"
keywords = [
  "encoding",
  "hashing",
  "compression",
  "convert",
  "security"
]
categories = [
  "encoding",
  "cryptography",
  "compression",
  "wasm"
]

[lib]
name = "encore"
crate-type = ["rlib", "cdylib"]

[features]
default = ["std"]

std = []
wasm = ["dep:wasm-bindgen"]
napi = ["dep:napi", "dep:napi-derive"]

hash = ["dep:sha2", "dep:blake3"]
encode = ["dep:base64", "dep:hex"]
compress = ["dep:flate2", "dep:zstd"]

all = ["hash", "encode", "compress"]

[dependencies]
# Encoding
base64 = { version = "0.22", optional = true }
hex = { version = "0.4", optional = true }

# Hashing
sha2 = { version = "0.10", optional = true }
blake3 = { version = "1.5", optional = true }

# Compression
flate2 = { version = "1.0", optional = true }
zstd = { version = "0.13", optional = true }

# WASM
wasm-bindgen = { version = "0.2", optional = true }

# NAPI (Node.js bindings)
napi = { version = "2", optional = true, default-features = false, features = ["napi8"] }
napi-derive = { version = "2", optional = true }

# Utilities
thiserror = "1.0"
bytes = "1.5"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
