[package]
name = "encore"
version = "1.0.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/irongate/encore"
authors = ["KhulnaSoft <info@khulnasoft.io>"]
readme = "README.md"
description = """
WASM bindings for irongate/encore crate
"""

[lib]
crate-type = ["cdylib"]

[dependencies]
irongate-encore = { path = "../irongate-encore", features = ["encode", "hash", "wasm"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.69"

[profile.release]
lto = true
opt-level = 's'
