[package]
name = "irongate-actix-sse"
version = "0.1.0"
edition = "2021"
description = "Modern Server-Sent Events (SSE) implementation for Actix-web"
license = "MIT"

[lib]
name = "irongate_actix_sse"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
futures-core = "0.3"
futures-util = "0.3"
bytes = "1"
bytestring = "1"
mime = "0.3"
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "macros"] }
tokio-stream = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }