[package]
name = "irongate-buf-reader"
version = "0.1.0"
edition = "2021"
description = "High-performance async buffered reader for IO operations"
license = "MIT"

[lib]
name = "irongate_buf_reader"
path = "src/lib.rs"

[features]
default = ["tokio"]

# Tokio IO
all-tokio = ["tokio", "tokio-rustls", "tokio-openssl"]
tokio = ["dep:tokio"]
tokio-rustls = ["dep:tokio-rustls"]
tokio-openssl = ["dep:tokio-openssl"]

[dependencies]
bytes = "1"
pin-project-lite = "0.2"
tokio = { version = "1", default-features = false, optional = true }
tokio-rustls = { version = "0.26", default-features = false, optional = true }
tokio-openssl = { version = "0.6", default-features = false, optional = true }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", default-features = false, features = [
  "macros",
  "rt",
  "io-util",
] }