[package]
name = "irongate-os-info"
version = "0.1.0"
edition = "2021"
description = "Cross-platform library to get OS name and version information"
license = "MIT"

[dependencies]
thiserror = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
