[package]
name = "irongate_shell"
version = "0.1.0"
edition = "2021"
description = "Execute shell scripts asynchronously on multiple platforms without temporary files"
license = "MIT"

[lib]
name = "irongate_shell"
path = "src/lib.rs"

[dependencies]
bstr = "1.9"
log = "0.4"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3.12"
thiserror = "1"
tokio = { version = "1", features = [
  "time",
  "process",
  "io-util",
  "macros",
  "rt",
] }
typed-builder = "0.20"