[package]
name = "irongate-sqlite-regex"
version = "0.1.0"
edition = "2021"
description = "A regular expression SQLite extension"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sqlite-loadable = { git = "https://github.com/asg017/sqlite-loadable-rs", default-features = false }
regex = "1"

[features]
default = ["static", "ignore-invalid"]
dynamic = []
static = ["sqlite-loadable/static"]
ignore-invalid = []